# smarc_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  package.xml  setup.py
.github/workflows/: release.yml
action/: GotoWaypoint.action
msg/: .SMTask.msg.swp  CTD.msg  CTDFeedback.msg  CommsMessage.msg  ControllerStatus.msg  DVL.msg  DualThrusterFeedback.msg  DualThrusterRPM.msg  ExecutionStatus.msg  GotoWaypoint.msg  LatLonOdometry.msg  LatLonStamped.msg  MissionControl.msg  SMTask.msg  SensorStatus.msg  Sidescan.msg  SidescanPositioned.msg  SidescanStamped.msg  ThrusterDC.msg  ThrusterFeedback.msg  ThrusterRPM.msg
src/smarc_msgs/: sm_task_utils.py
srv/: AddTask.srv  AddTasks.srv  CellOccupied.srv  LatLonToUTM.srv  LatLonToUTMOdometry.srv  NEDENURotation.srv  UTMToLatLon.srv
